# KernelColonel

./: .gitignore  CMakeLists.txt  README.md  TODO.md  build.sh  download_matrices.py  job.sh  nvprof_command_example.md
.github/workflows/: cmake.yml
diagrams/: kernel colonel class diagram.drawio
sandbox/: CMakeLists.txt  main.cpp
src/: DirectoryFinder.h  IKernelData.cuh  clock_gettime_windows.h  collate_csvs.py  device_props.h  driver.cu  driver.h  example-config.json  expansion_contraction_indices_practice.py  foo.cpp  generate_kernel_template_instances.py  indices_generation.cpp  indices_generation.h  input_context.cu  kernel_context.cu  kernel_context_driver.cu  kernel_data.cu  kernel_postprocessing_info.py  local_basic_utils.h  local_cuda_utils.h  main.cu  output.h  plot_general.py  plot_output.py  simple_reorganization_structure.cu  spmv.cu  stats.h
src/cpp/: ConfigStore.cpp  config.cpp  main.cpp
src/cpp/execution/: JitifyCache.cu
src/include/: ConfigStore.hpp  IKernelConfigBase.hpp  IKernelData.cuh  IKernelData.hpp  IKernelExecution.hpp  config.hpp
src/include/data/: IKernelData.hpp  SimpleKernelData.hpp  SimpleKernelData.tpp
src/include/data/details/: IKernelData.tpp
src/include/details/: IKernelData.tcu  IKernelData.tpp  IKernelExecution.tpp
src/include/execution/: IKernelExecution.hpp  JitifyCache.cuh  KernelExecution.hpp  SimpleKernelBatch.hpp  SimpleKernelExecution.hpp  SimpleKernelRunSet.hpp  kc_jitify.hpp
src/include/execution/details/: KernelExecution.tpp  SimpleKernelBatch.tpp  SimpleKernelExecution.tpp  SimpleKernelRunSet.tpp
src/include/utils/: cuda_utils.hpp  local_basic_utils.h  type_name.hpp  utils.h  utils.hpp
src/kernels/: computation.cu  copy.cu  kernel_test.cu  overlap_index_access_with_data.cu  overlap_index_switch.cu  simple_indirection.cu  template.cu
src/kernels/burst_mode/: interleaved_copy.cu  interleaved_copy_full_life.cu  interleaved_fl_ilp.cu
src/kernels/burst_mode/tests/: interleaved_full_life.test  interleaved_full_life_ILP.test  interleaved_simple.test
src/kernels/expansion_contraction/: expansion_contraction.cu
src/kernels/expansion_contraction/tests/: expansion_contraction.htest  expansion_contraction.test
src/kernels/general/: computation.cu  copy.cu  overlap_index_access_with_data.cu  simple_indirection.cu
src/kernels/general/tests/: computational_intensity.test  indirection_simple.test  overlapped_access.test
src/kernels/indirect/: indirect_copy.cu
src/kernels/indirect/tests/: indirect_copy.htest  indirect_copy_profiling.test  indirect_copy_sector_based_uncoalescing.test  indirect_copy_uncoalesced_no_reuse.test  indirect_copy_uncoalesced_no_reuse.test~  indirect_copy_warpsize_based_uncoalescing.test
src/kernels/spmv/: spmv_base.cu  spmv_driver.h  spmv_la_1.cu  spmv_la_2_val4.cu  spmv_la_3_val5.cu  spmv_preload.cu
src/kernels/spmv/tests/: spmv_la_1.htest  spmv_la_1.test  spmv_la_1_profile.test  spmv_la_2.htest  spmv_la_2.test
src/kernels/uncoalesced_cached_access/: uncoalesced_reuse.cu  uncoalesced_reuse_gen_single_ILP.cu  uncoalesced_reuse_general_size.cu  uncoalesced_reuse_general_size_single_element.cu
src/kernels/uncoalesced_cached_access/tests/: uncoalesced_reuse_general.test  uncoalesced_reuse_general_single.test  uncoalesced_reuse_general_single_ILP.htest  uncoalesced_reuse_general_single_ILP.test  uncoalesced_reuse_general_single_ILP_check_only.htest  uncoalesced_reuse_profiling.test
src/matrices/: crs_mat.h  mmio.h  read_coo_to_crs_matrix.h
src/misc/: download_matrices.py
src/old_microbenchmark_framework/: device_props.h  driver.h  indices_generation.h  kernel_context.cu  main.cu  output.h
src/postprocessing/: collate_csvs.py  kernel_postprocessing_info.py  node_postprocessing_info.py  plot_general.py  plot_output.py  plot_profile_results.py
src/tests/: copy.test  indirect_copy.test  interleaved_full_life_ILP.test  uncoalesced_reuse.test  uncoalesced_reuse_general_single_ILP.test
src/utilities/: deviceQuery.cpp
src/utilities/matrices/: crs_mat.h  mmio.c
test/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  DirectoryFinderTests.cpp  IKernelDataTest.cpp  IKernelDataTests.cpp  IKernelDataTests.cu  IKernelExecutionTests.cu  driver_test.cc
tests/cpp/: IKernelDataTests.cu  JITCompilationTests.cu  KernelRunSetTests.cu  SimpleCopyTests.cu  SimpleKernelBatchTests.cu  SimpleKernelExecutionTests.cu  SimpleKernelFileExecutionTests.cu  SimpleKernelRunSetTests.cu  TypeNameTests.cpp  simple_copy.cuh
tests/include/: check_cuda.cuh
